# TheDndRepo

./: .gitignore  .gitmodules  LICENSE  README.md
application/: CMakeLists.txt
application/backend/: CMakeLists.txt
application/backend/include/: backend.h  backend.hpp  statBlock.h
application/backend/src/: backend.cpp
application/src/: main.cpp
backend/: CMakeLists.txt  CmakeLists.txt
backend/src/: backend.cpp
