cmake_minimum_required(VERSION 4.2)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(TheDndRepo VERSION 1.0)
file(GLOB_RECURSE SRC_FILES src/*.cpp)
add_executable(TheDndRepo ${SRC_FILES})
target_include_directories(TheDndRepo PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(TheDndRepo PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../backend/build/libBackEnd.a)
target_include_directories(TheDndRepo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../backend/include)